--- a/charts/teamcity/templates/service.yaml
+++ b/charts/teamcity/templates/service.yaml
@@ -10,8 +10,8 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.service.internalPort }}
+    - port: {{ .Values.service.servicePort }}
+      targetPort: 8111
       protocol: TCP
       name: {{ .Values.service.name }}
   selector:
