--- a/charts/teamcity/templates/server_deployment.yaml
+++ b/charts/teamcity/templates/server_deployment.yaml
@@ -5,33 +5,35 @@ metadata:
   labels:
     app: {{ template "name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    component: {{ .Values.server.name }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.server.replicaCount }}
   template:
     metadata:
       labels:
         app: {{ template "name" . }}
+        component: {{ .Values.server.name }}
         release: {{ .Release.Name }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          image: "{{ .Values.server.image.repository }}:{{ .Values.server.image.tag }}"
+          imagePullPolicy: {{ .Values.server.image.pullPolicy }}
           ports:
             - containerPort: 8111
           resources:
-{{ toYaml .Values.resources | indent 12 }}
+{{ toYaml .Values.server.resources | indent 12 }}
           volumeMounts:
           - name: data
             mountPath: /data/teamcity_server/datadir
             readOnly: false
       volumes:
       - name: data
-      {{- if .Values.persistentVolume.enabled }}
+      {{- if .Values.server.persistentVolume.enabled }}
         persistentVolumeClaim:
-          claimName: {{ if .Values.persistentVolume.existingClaim }}{{ .Values.persistentVolume.existingClaim }}{{- else }}{{ template "fullname" . }}{{- end }}
+          claimName: {{ if .Values.server.persistentVolume.existingClaim }}{{ .Values.server.persistentVolume.existingClaim }}{{- else }}{{ template "fullname" . }}{{- end }}
       {{- else }}
         emptyDir: {}
       {{- end -}}
