--- a/charts/teamcity/values.yaml
+++ b/charts/teamcity/values.yaml
@@ -1,26 +1,42 @@
 # Default values for teamcity.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-replicaCount: 1
-image:
-  repository: jetbrains/teamcity-server
-  tag: latest
-  pullPolicy: IfNotPresent
-service:
-  name: teamcity-server
-  type: ClusterIP
-  servicePort: 8111
-persistentVolume:
-  enabled: true
-  accessModes:
-  - ReadWriteOnce
-  annotations: {}
-  ## If defined, PVC must be created manually before volume will be bound
-  existingClaim: ""
-  mountPath: /data/teamcity_server/datadir
-  size: 5Gi
-  storageClass: ""
-  subPath: ""
+server:
+  name: tc-server
+  replicaCount: 1
+  image:
+    repository: jetbrains/teamcity-server
+    tag: latest
+    pullPolicy: IfNotPresent
+  service:
+    name: teamcity-server
+    type: ClusterIP
+    servicePort: 8111
+  persistentVolume:
+    enabled: true
+    accessModes:
+    - ReadWriteOnce
+    annotations: {}
+    # If defined, PVC must be created manually before volume will be bound
+    existingClaim: ""
+    mountPath: /data/teamcity_server/datadir
+    size: 5Gi
+    storageClass: ""
+    subPath: ""
+  resources: {}
+    #limits:
+    #  cpu: 100m
+    #  memory: 128Mi
+    #requests:
+    #  cpu: 100m
+    #  memory: 128Mi
+agent:
+  name: tc-agent
+  replicaCount: 2
+  image:
+    repository: jetbrains/teamcity-agent
+    tag: latest
+    pullPolicy: IfNotPresent
 
 ingress:
   enabled: true
@@ -35,14 +51,3 @@ ingress:
     - secretName: teamcity-tls
       hosts:
         - teamcity.k8s.dshmelev.net
-resources: {}
-  # We usually recommend not to specify default resources and to leave this as a conscious
-  # choice for the user. This also increases chances charts run on environments with little
-  # resources, such as Minikube. If you do want to specify resources, uncomment the following
-  # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-  # limits:
-  #  cpu: 100m
-  #  memory: 128Mi
-  #requests:
-  #  cpu: 100m
-  #  memory: 128Mi
